# unroll

./: .gitignore  CMakeLists.txt  Readme.md  TODO.txt  build.bat
core/: ArchiveIODevice.cpp  ArchiveIODevice.h  CMakeLists.txt  CachedFileDevice.cpp  CachedFileDevice.h  archivesystem.cpp  archivesystem.hpp  asyncarchivefilereader.cpp  asyncarchivefilereader.h  asyncarchiveiodevice.cpp  asyncarchiveiodevice.h  asyncdirectorysystem.cpp  asyncdirectorysystem.hpp  asyncdirsystem.cpp  asyncdirsystem.hpp  dbutil.hpp  directorysortmodel.cpp  directorysortmodel.hpp  directorysystem.hpp  directorysystemmodel.cpp  directorysystemmodel.hpp  filehistorydb.cpp  filehistorydb.hpp  filehistorydb_p.hpp  filesystem.cpp  filesystem.hpp  filetype.cpp  filetype.hpp  hybriddirsystem.cpp  hybriddirsystem.hpp  multidirsystem.cpp  multidirsystem.hpp  persistenthash.cpp  persistenthash.hpp
gui/: CMakeLists.txt  directoryopener.cpp  directoryopener.hpp  ffmpegframeextractor.cpp  ffmpegframeextractor.h  file-browser.rc  filebrowser.cpp  filebrowser.hpp  historycontroller.cpp  historycontroller.hpp  historystack.cpp  historystack.hpp  iconprovider.cpp  iconprovider.hpp  main.cpp  main.qml  pathhistorydb.cpp  pathhistorydb.hpp  preferences.cpp  preferences.hpp  viewcontroller.cpp  viewcontroller.hpp
gui/qml/: AppMenuBar.qml  HResizeHandle.qml  MainView.qml  PathEdit.qml  PreviewView.qml  TableViewExt.qml  main.qml  qml.qrc
gui/qml/preview/: ImagePreview.qml  Player.qml
gui/qml/preview/widgets/: VideoPreview.qml
gui/qml/widgets/: AutoPreviewHandler.qml  StatusLabel.qml  VideoFrame.qml
tests/: CMakeLists.txt  print_dir.py  test_ArchiveIODevice.cpp  test_AsyncArchiveIODevice.cpp  test_archivesystem.cpp  test_asyncarchivefilereader.cpp  test_directorysystemmodel.cpp  test_filesystem.cpp  tests.json
tests/archivedir/: test.txt
tests/archivedir/lol/tar/: new.txt
